style.css
h3 {
    opacity: 0;
    transition: opacity 1s;
}

body {
    overflow-x: hidden;
}

main>.container {
    margin-top: 50px;
    margin-bottom: 20px;
    background-color: #ffffff;
}

h3 {
    font-weight: 700;
}
.white
{
    
    color: #212121ff;
}
/* Sets the variables up(?) */
.monospace,
.text-ms {
    opacity: 0;
    transition: transform 2s, opacity 2s;
    z-index: 0;
    background-clip: padding-box !important;
    padding: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.image-view {
    opacity: 0;
    transition: transform 2s, opacity 2s;
    z-index: 0;
    background-clip: content-box !important;
    padding: 50px;
    display: flex;
    max-width: 100vw;
    height: auto;
    justify-content: center;
}

.wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.monospace h2 {
    color: #1e1e1e;
    font-weight: 700;
    transform: translateY(50%);
    text-align: center;
}

.text-ms h1 {
    color: #1e1e1e;
    font-weight: 700;
    transform: translateY(50%);
    text-align: left;
    font-size: 55px;
}

.text-ms h2 {
    color: #1e1e1e;
    font-weight: 500;
    transform: translateY(50%);
    text-align: left;
}

.monospace h3,
.text-ms h3 {
    color: #1e1e1e;
    font-size: 25px;
    transform: translateY(5%);
    font-weight: 400;
    padding: 30px;
    text-align: center;
}

.monospace a:hover,
.text-ms a:hover {
    background: linear-gradient(180deg, #0000 0%, #cfd0d2 100%);
    text-decoration: none;
}

/* monospace button in the main page. */
.monospace {

    background: radial-gradient(#ebebebd1 0%, #cfd0d2 100%);
    border: solid 1px #1e1e1e;
    /* transform: translateX(-200%); */
}

.text-ms {
    opacity: 0;
    /* transform: translateX(-200%); */
}

main img {
    width: 100%;
    object-fit: contain;
}

header,
main>.container {
    z-index: 100;
}

div.gallery {
    margin: 5px;
    border: 1px solid #ccc;
    display: inline-block;
    width: 500px;
}

div.gallery:hover {
    border: 1px solid rgb(199, 199, 199);
}

div.gallery img {
    width: 100%;
    height: auto;
}

div.desc {
    padding: 12px;
    text-align: center;
    color: black;
}

.container-styled {
    background: #f7f7f7;

    box-shadow: inset 0 1px 5px #00000020, 0 1px #ffffff20;
    color: #ffffff;
    padding: 30px;

}

p {
    font-family: "Hind", sans-serif;
    font-style: normal;
    color: #212121;
    justify-content: left;
    font-weight: 500;
}

h2 {
    font-family: "Hind", sans-serif;
    font-style: normal;
    color: #212121;
    text-align: center;
    justify-content: left;
    font-weight: 500;
}

b {
    background-color: #8b8b8b;
    color: white;
    font-weight: 600;
    SCALE: none;
    padding: 5px;
}

.header h1 {
    font-size: 80px;
    font-weight: 700;
    opacity: 0;
    transition: opacity 2s;
    color: #ffffff;
}

/* HeaderInfo ^ */

